[package]
name = "reflink-at"
version = "0.1.0"
edition = "2021"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.158"
nix = { version = "0.29.0", features = ["ioctl", "fs"] }
thiserror = "1.0.63"

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
log = { version = "0.4.22" }
env_logger = "0.11.5"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
